--- a/.gitignore
+++ b/.gitignore
@@ -47,6 +47,8 @@ graphs/
 *.mtl
 *.fbx
 !*_custom*
+!assets/textures/common/*
+!assets/scenes/overworld/learning01/*
 .extracted-assets.json
 
 # Docs
